--- a/career.html
+++ b/career.html
@@ -18,6 +18,12 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
+  <style>
+  #header {
+    margin-bottom: 20px; /* Adjust the value as needed */
+  }
+</style>
+
 </head>
 <body>
   <!-- ======= Top Bar ======= -->
